--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,6 @@ title: Lemma
 description: Man is a bridge
 show_downloads: true
 google_analytics:
-chapter_path: /chapters.html
+markdown: kramdown
+permalink: /:categories/:title
  
