--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,27 @@
 title: Lemma
 description: Man is a bridge
 markdown: kramdown
-# permalink: /:categories/:title
+permalink: /:categories/:title
 encoding: bom|utf-8
 
+keywords: "Fiction, AI, Sci-Fi, Adventure"
+baseurl: "/Lemma"
+url: "https://nikolaiusyk.github.io/Lemma/"
+fanpage_id: ""
+
+# Site general settings
+lang: "en"
+ssl: false # It will redirect to https
+
+# Media
+# Just the shortname:
+# facebook: lampiaosec # Rigth
+# facebook: facebook.com/lampiaosec # Wrong
+disqus: test
+# twitter: 
+# facebook: 
+# github: 
+# google:
 
 show_downloads: true
 google_analytics:
